istio-gateway/team-istio-routes/payments/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: payments-gateway
  namespace: payments-team
spec:
  # This must match the label on payments-istio-ingressgateway pods.
  selector:
    app: payments-istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - finance.hellocloud.io
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: payments-routes
  namespace: payments-team
spec:
  hosts:
  - finance.hellocloud.io
  # Connect this VirtualService to the Gateway above.
  gateways:
  - payments-gateway
  http:
  # Kong rewrites /payments/transactions to /transactions before traffic arrives here.
  - match:
    - uri:
        prefix: /transactions
    # Send matched traffic to the payments app Service.
    route:
    - destination:
        host: transfer-svc.payments-team.svc.cluster.local
        port:
          number: 7071
